--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "semantic-ui-less-loader",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "inherited from less-loader in order to use semantic-ui-less easily.",
-  "keywords": ["webpack", "webpack-loader", "less-loader", "semantic-ui"],
+  "keywords": [
+    "webpack",
+    "webpack-loader",
+    "less-loader",
+    "semantic-ui"
+  ],
   "homepage": "https://github.com/robario/semantic-ui-less-loader#readme",
   "bugs": "https://github.com/robario/semantic-ui-less-loader/issues",
   "license": "MIT",
